# task-garden

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SECURITY.md  SKILL.md  package-lock.json  package.json  start-task-garden.cmd  tsconfig.base.json
apps/api/: alembic.ini  pyproject.toml
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/db/: models.py  session.py
apps/api/app/domain/: entities.py
apps/api/app/garden/: README.md  __init__.py
apps/api/app/providers/: __init__.py  extraction_common.py  interfaces.py  local_stt.py  ollama.py  ollama_common.py  recap_ollama.py  stubs.py
apps/api/app/recap/: README.md  __init__.py
apps/api/app/repositories/: interfaces.py  sqlalchemy.py
apps/api/app/routers/: __init__.py  entries.py  entry_extractions.py  extractions.py  garden.py  health.py  planning.py  projects.py  recaps.py  recommendations.py  settings.py  sync.py  tasks.py
apps/api/app/schemas/: common.py  entries.py  extractions.py  garden.py  projects.py  recaps.py  recommendations.py  settings.py  sync.py  tasks.py
apps/api/app/services/: activity.py  common.py  entries.py  extractions.py  garden.py  local_models.py  projects.py  provider_checks.py  provider_registry.py  recap_narratives.py  recaps.py  recommendations.py  settings.py  sync.py  tasks.py  transcription.py
apps/api/scripts/: eval_extraction_samples.py
apps/api/tests/: test_garden.py  test_phase1_api.py  test_recaps.py  test_recommendations.py  test_sync.py
apps/api/tests/fixtures/: extraction_samples.json
(+49 files in other folders)
